--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
                     voluptate animi quia cumque dolores rerum.
                 </h3>
 
+                <h1 id="about-intro-title">Yeteneklerim</h1>
+                <ul class="skills">
+                    <li class="item">Html</li>
+                    <li class="item">Css</li>
+                    <li class="item">Java</li>
+                    <li class="item">Flutter</li>
+                    <li class="item">Firebase</li>
+                    <li class="item">Jetpack Compose</li>
+                    <li class="item">Kotlin</li>
+                </ul>
+
                 <a href="https://www.linkedin.com/in/enescakarr/" target="_blank" id="about-btn">daha fazla</a>
             </div>
         </div>
