create blog page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Welcome Section -->
     <div class="welcome-section-swapper">
+        <a href="./pages/blog.html" id="blog">Blog</a>
         <div class="landing">
             <h1 id="my-name-text">Enes Çakar</h1>
             <h2 class="description">Software Developer</h2>
