--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Roboto:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/Global.css">
+    <link rel="stylesheet" href="../css/Blog.css">
     <title>Blog</title>
 </head>
+
 <body>
-    <h1>Blog</h1>
+    <div class="blog-welcome-swapper">
+        <div class="blog-welcome-content">
+            <h3 id="blog-welcome-text">Merhaba!</h3>
+            <h1 id="blog-name-text">Bloguma Hoş Geldin</h1>
+        </div>
+    </div>
 </body>
+
 </html>
